# local_ai_aether

./: .gitignore  .gitmodules  APP_STORE_RELEASE_CHECKLIST.md  PRIVACY_POLICY.md  README.md  project.yml
AetherChat/: AetherBackendClient.swift  AetherModelCatalog.swift  AetherOnDeviceClient.swift  AetherWebSearchService.swift  ChatView.swift  ContentView.swift  ConversationListView.swift  Info.plist  Models.swift  OakBackground.swift  OnboardingView.swift  SettingsView.swift  Theme.swift  WelcomeView.swift
AetherChat.xcodeproj/: project.pbxproj
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  canopy_llama.cpp
android/tools/: mock_openai.py
backend/: README.md  build.gradle.kts  settings.gradle.kts
contributor_pipeline/: .env.example  .gitignore  DGX_CODEX_PROMPT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
contributor_pipeline/deploy/: Caddyfile
contributor_pipeline/docs/: IOS_INTEGRATION.md  OPERATIONS.md  PRIVATE_MODEL_DELIVERY.md
contributor_pipeline/tests/: test_pipeline.py
docs/: CLOUDFLARE_MODEL_DELIVERY_PROMPT.md  CONTRIBUTOR_TELEMETRY_DEPLOYMENT_PROMPT.md  DEPLOY_MODEL_DELIVERY_FIX_PROMPT.md  MODEL_DELIVERY_API.md
iphone/: project.yml
iphone/AetherChat/: AetherBackendClient.swift  AetherChatApp.swift  AetherLocationService.swift  AetherMemoryStore.swift  AetherModelCatalog.swift  CanopyFeedback.swift  (+15 more)
iphone/AetherChat.xcodeproj/: project.pbxproj
model_delivery/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
(+57 files in other folders)
